# mandelatar

./: .env  Cargo.toml  LICENSE  README.md  backend.dockerfile  docker-compose.override.yml  docker-compose.yml  frontend-static.dockerfile
backend/: Cargo.toml
backend/src/: main.rs  server_config.rs
backend_rust/: Cargo.toml  Dockerfile
backend_rust/src/: main.rs  server_args.rs  server_config.rs
backend_rust/src/lib/: imageparams.rs  lib.rs  mandelbrot.rs
core/src/: errors.rs  lib.rs  mandelbrot.rs  post_processing.rs
edge/: .gitignore  Cargo.toml  README.md  wrangler.toml  wrangler_docs.md
edge/benches/: bench_image_gen.rs
edge/src/: errors.rs  lib.rs  post_processing.rs  routes.rs
mandelatar-core/: Cargo.toml
mandelatar-core/src/: errors.rs  image_params.rs
src/: errors.rs  lib.rs  main.rs
src/lib/: mandelbrot.rs
ui/: index.html  main.js
