[package]
name = "mandelatar"
version = "0.1.0"
edition = "2021"
authors = ["Oakley Peavler <oakleypeavler@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mandelatar"
path = "src/main.rs"

[dependencies]
num = "0.4"
crossbeam = "0.8"
actix-web = "4"
actix-cors = "0.6.2"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
image = "0.24.3"
bincode = "1.3.3"
rand = "*"
url = "2.2.2"
base64 = "0.13.0"
serde = { version = "1.0.140", features = ["derive"] }
enumflags2 = { version = "0.7.5", features = ["serde"] }
mandelatar-core = { path = "../core", features = ["parallel"] }
