[package]
name = "mandelatar-edge"
version = "0.1.0"
authors = ["Oakley Peavler"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
log = "0.4.17"
image = "0.24.3"
bincode = "1.3.3"
rand = "*"
base64 = "0.13.0"
num = "0.4"
async-trait = "0.1.57"
serde = { version = "1.0.140", features = ["derive"] }
enumflags2 = { version = "0.7.5", features = ["serde"] }
mandelatar-core = { path = "../core" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures"] }

[[bench]]
name = "bench_image_gen"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level="s"
opt-level = 3
lto="fat"
