[package]
name = "mandelatar-core"
version = "0.1.0"
authors = ["Oakley Peavler"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.2"
log = "0.4.17"
image = "0.24.3"
bincode = "1.3.3"
rand = "*"
base64 = "0.13.0"
num = "0.4"
serde = { version = "1.0.140", features = ["derive"] }
enumflags2 = { version = "0.7.5", features = ["serde"] }
rayon = { version = "1.5.3", optional = true }

[features]
parallel = ["dep:rayon"]
